fix(hypr): properly fix icons in waybar by defining Symbols Nerd Font first
Cascadia Code updated today to support nerd fonts, and being my primary
font, those took over...but they're too small.

--- a/.config/waybar/desktop.css
+++ b/.config/waybar/desktop.css
@@ -1,6 +1,8 @@
 * {
 	/* `otf-font-awesome` is required to be installed for icons */
-	font-family: Roboto;
+	font-family:
+		Symbols Nerd Font,
+		Roboto;
 	font-size: 13px;
 }
 
@@ -54,8 +56,8 @@ button:hover {
 }
 
 #window,
-#workspaces * {
-	font-size: 18px;
+#workspaces {
+	margin: 0 4px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
